# owner-signal-version-handover

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix
examples/: canonical.nota
schema/: owner-signal-version-handover.concept.schema
src/: lib.rs
tests/: round_trip.rs
