[package]
name         = "owner-signal-version-handover"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/owner-signal-version-handover"
description  = "Owner-only administrative signal contract for version handover."
publish      = false

[lib]
name = "owner_signal_version_handover"
path = "src/lib.rs"

[dependencies]
nota-codec         = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv               = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame       = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "operator-full-schema-spirit-2026-05-26" }
signal-sema        = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "operator-full-schema-spirit-2026-05-26" }
version-projection = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main" }
thiserror          = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
